# qivxif

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.package  Dockerfile.verify  README.md  docker-compose.package.yml  docker-compose.verify.yml  docker-compose.windows.yml  docker-compose.yml
.config/: nextest.toml
.github/workflows/: linux-compose.yml  windows-cli.yml
apps/: README.md  overview.md
apps/qivxif-client-cli/: Cargo.toml
apps/qivxif-client-cli/src/: chunk.rs  connect.rs  join.rs  main.rs  mutate.rs
apps/qivxif-client-desktop/: Cargo.toml
apps/qivxif-client-desktop/src/: args.rs  main.rs  native.rs  native_controls.rs  native_evidence.rs  native_window.rs  smoke.rs
apps/qivxif-server/: Cargo.toml
apps/qivxif-server/src/: config.rs  lib.rs  main.rs  markdown.rs  state.rs
apps/qivxif-server/src/routes/: auth.rs  follow.rs  graph.rs  health.rs  history.rs  mod.rs  moderation.rs  neighborhood.rs  publish.rs  server_info.rs  session.rs  setup.rs  social.rs  static_files.rs  support.rs  sync.rs  text.rs  tile_layout.rs  workspace.rs
apps/qivxif-server/tests/: auth_routes.rs  follow_routes.rs  graph_routes.rs  history_routes.rs  login_actor_seq.rs  moderation_routes.rs  neighborhood_routes.rs  publish_routes.rs  setup_routes.rs  social_routes.rs  support.rs  sync_acl_routes.rs  sync_routes.rs  text_routes.rs  tile_layout_routes.rs  workspace_routes.rs
apps/qivxif-serverd/: Cargo.toml
apps/qivxif-serverd/src/: app.rs  main.rs  request.rs  request_tests.rs  session.rs
apps/qivxif-superapp/: Cargo.toml
apps/qivxif-superapp/src/: main.rs
apps/qivxif-web/: Cargo.toml  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/qivxif-web/public/: README.md  manifest.json  (+1 more)
apps/qivxifctl/: Cargo.toml
apps/qivxifctl/src/: cli.rs  cli_admin.rs  commands.rs  main.rs
apps/qivxifctl/tests/: admin_commands.rs
config/: server.toml
config/verify/: basic-server.toml
crates/: README.md
crates/qivxif-action/: Cargo.toml
crates/qivxif-api/: Cargo.toml  README.md
crates/qivxif-assets/: Cargo.toml
crates/qivxif-auth/: Cargo.toml  README.md
crates/qivxif-auth/src/: acl.rs  context.rs  csrf.rs  error.rs  lib.rs  password.rs
crates/qivxif-browser/: Cargo.toml
crates/qivxif-browser/src/: controller.rs  lib.rs  policy.rs  state.rs
crates/qivxif-cache-model/: Cargo.toml  README.md
crates/qivxif-client-core/: Cargo.toml
crates/qivxif-client-core/src/: command_queue.rs  commands.rs  config.rs  event.rs  lib.rs  runtime.rs  runtime_handle.rs  runtime_task.rs  session.rs  world_cache.rs
crates/qivxif-core/: Cargo.toml  README.md
crates/qivxif-editor-buffer/: Cargo.toml
crates/qivxif-editor-view/: Cargo.toml
crates/qivxif-explorer/: Cargo.toml
crates/qivxif-graph/: Cargo.toml  README.md
crates/qivxif-history/: Cargo.toml  README.md
crates/qivxif-input/: Cargo.toml
crates/qivxif-markdown/: Cargo.toml
crates/qivxif-net/: Cargo.toml
crates/qivxif-net/src/: lib.rs
crates/qivxif-persistence/: Cargo.toml
crates/qivxif-persistence/src/: lib.rs  recovery.rs  store.rs
crates/qivxif-platform/: Cargo.toml
crates/qivxif-probe/: Cargo.toml
crates/qivxif-probe/src/: client.rs  guard.rs  lib.rs  malformed.rs  scenario.rs  transport.rs
crates/qivxif-protocol/: Cargo.toml
crates/qivxif-quality/: Cargo.toml  README.md
crates/qivxif-render/: Cargo.toml
crates/qivxif-render/src/: gpu.rs  lib.rs  scene.rs  smoke.rs
crates/qivxif-shell/: Cargo.toml
crates/qivxif-shell/src/: effects.rs  io.rs  lib.rs  model.rs  native.rs  reducer.rs  snapshot.rs  ui.rs  ui_chrome.rs  ui_layout.rs  ui_panes.rs
crates/qivxif-sim/: Cargo.toml
crates/qivxif-sim/src/: lib.rs  region_tests.rs
crates/qivxif-storage/: Cargo.toml
crates/qivxif-storage/src/: archives.rs  database.rs  edit_overlays.rs  errors.rs  lib.rs  metadata.rs  tables.rs
crates/qivxif-store-redb/: Cargo.toml  README.md
crates/qivxif-store-redb/src/: actor_sequence.rs  codec.rs  config.rs  edge.rs  error.rs  event_log.rs  event_write.rs  feed.rs  feed_audience.rs  feed_rebuild.rs  feed_support.rs  follow.rs  follow_support.rs  graph.rs  graph_query.rs  history_query.rs  key_store.rs  lib.rs  maintenance_tests.rs  moderation.rs  moderation_action.rs  moderation_query.rs  operation_log.rs  publish.rs  publish_support.rs  records.rs  repair.rs  repair_edges.rs  repair_feed.rs  store.rs  sync_accept.rs  tables.rs  text_store.rs  tile_layout.rs  user_store.rs  workspace.rs
crates/qivxif-sync/: Cargo.toml  README.md
crates/qivxif-tiles/: Cargo.toml
crates/qivxif-ui/: Cargo.toml
crates/qivxif-workspace/: Cargo.toml
crates/qivxif-world/: Cargo.toml
docker/windows/: client-cli.Dockerfile  demo-bundle.Dockerfile
docs/: AGENTS.md  README.md  active-work.md  current-state.md
docs/architecture/: README.md
docs/decisions/: README.md  accepted.md  open-questions.md  rejected.md
docs/getting-started/: README.md  orientation.md  quickstart.md  verification.md  where-next.md
docs/operations/: README.md
docs/product/: README.md  doc-impl-audit.md  playable-target.md
docs/repository/: README.md
docs/research/: README.md  axum-redb.md  browser-stack.md  cache-orchestration.md  client-delivery-references.md  desktop-stack.md  editor-stack.md  networking-references.md  offline-web.md  operations-references.md  quality-stack.md  rendering-references.md  report-synthesis.md  security-references.md  storage-references.md  text-crdt.md  webtransport.md
docs/vision/: README.md  llm-authoring.md  non-goals.md  principles.md  product-shape.md  purpose.md
scripts/: api-proof.sh  build-web.sh  offline-e2e.sh  package-linux.sh  package-windows.sh  server-smoke.sh  verify-compose.sh  verify-package-windows.sh  verify-static.sh  verify-windows-client-cli.sh  verify-windows-demo-bundle.sh  verify.sh
tests/: README.md  overview.md
tests/offline/: README.md  browser-helpers.mjs  drag-helpers.mjs  local-snapshot-helpers.mjs  proof-slice.mjs  publish-flow.mjs  publish-helpers.mjs  setup-flow.mjs
(+588 files in other folders)
