[workspace]
members = [
  "apps/qivxif-serverd",
  "apps/qivxif-client-cli",
  "apps/qivxif-client-desktop",
  "apps/qivxifctl",
  "crates/qivxif-client-core",
  "crates/qivxif-assets",
  "crates/qivxif-core",
  "crates/qivxif-input",
  "crates/qivxif-protocol",
  "crates/qivxif-render",
  "crates/qivxif-net",
  "crates/qivxif-ui",
  "crates/qivxif-world",
  "crates/qivxif-sim",
  "crates/qivxif-storage",
  "crates/qivxif-quality",
  "crates/qivxif-probe",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["qivxif contributors"]

[workspace.dependencies]
anyhow = "1"
bevy_ecs = "0.18"
clap = { version = "4", features = ["derive"] }
object_store = { version = "0.12", features = ["fs"] }
postcard = { version = "1", features = ["use-std"] }
quinn = "0.11"
rcgen = "0.13"
redb = "4"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

qivxif-core = { path = "crates/qivxif-core" }
qivxif-client-core = { path = "crates/qivxif-client-core" }
qivxif-assets = { path = "crates/qivxif-assets" }
qivxif-protocol = { path = "crates/qivxif-protocol" }
qivxif-input = { path = "crates/qivxif-input" }
qivxif-render = { path = "crates/qivxif-render" }
qivxif-net = { path = "crates/qivxif-net" }
qivxif-ui = { path = "crates/qivxif-ui" }
qivxif-world = { path = "crates/qivxif-world" }
qivxif-sim = { path = "crates/qivxif-sim" }
qivxif-storage = { path = "crates/qivxif-storage" }
qivxif-quality = { path = "crates/qivxif-quality" }
qivxif-probe = { path = "crates/qivxif-probe" }
