[workspace]
members = [
  "apps/qivxif-superapp",
  "apps/qivxifctl",
  "crates/qivxif-action",
  "crates/qivxif-browser",
  "crates/qivxif-editor-buffer",
  "crates/qivxif-editor-view",
  "crates/qivxif-explorer",
  "crates/qivxif-markdown",
  "crates/qivxif-persistence",
  "crates/qivxif-platform",
  "crates/qivxif-quality",
  "crates/qivxif-shell",
  "crates/qivxif-tiles",
  "crates/qivxif-workspace",
]
default-members = [
  "apps/qivxif-superapp",
  "apps/qivxifctl",
  "crates/qivxif-quality",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["qivxif contributors"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cosmic-text = "0.19.0"
egui = "0.33.3"
egui-wgpu = { version = "0.33.3", features = ["winit"] }
egui-winit = { version = "0.33.3", features = ["accesskit"] }
egui_tiles = "0.14.1"
pulldown-cmark = "0.13.3"
ropey = "1.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
wgpu = "29.0.1"
winit = "0.30.13"
wry = { version = "0.55.1", default-features = false, features = ["protocol"] }

qivxif-action = { path = "crates/qivxif-action" }
qivxif-browser = { path = "crates/qivxif-browser" }
qivxif-editor-buffer = { path = "crates/qivxif-editor-buffer" }
qivxif-editor-view = { path = "crates/qivxif-editor-view" }
qivxif-explorer = { path = "crates/qivxif-explorer" }
qivxif-markdown = { path = "crates/qivxif-markdown" }
qivxif-persistence = { path = "crates/qivxif-persistence" }
qivxif-platform = { path = "crates/qivxif-platform" }
qivxif-quality = { path = "crates/qivxif-quality" }
qivxif-shell = { path = "crates/qivxif-shell" }
qivxif-tiles = { path = "crates/qivxif-tiles" }
qivxif-workspace = { path = "crates/qivxif-workspace" }
