[workspace]
members = [
  "apps/qivxif-server",
  "apps/qivxifctl",
  "apps/qivxif-web",
  "crates/qivxif-core",
  "crates/qivxif-api",
  "crates/qivxif-graph",
  "crates/qivxif-history",
  "crates/qivxif-store-redb",
  "crates/qivxif-auth",
  "crates/qivxif-sync",
  "crates/qivxif-cache-model",
  "crates/qivxif-quality",
]
default-members = [
  "apps/qivxif-server",
  "apps/qivxifctl",
  "crates/qivxif-quality",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["qivxif contributors"]

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
axum = "0.8"
bincode = "1.3"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

qivxif-core = { path = "crates/qivxif-core" }
qivxif-api = { path = "crates/qivxif-api" }
qivxif-graph = { path = "crates/qivxif-graph" }
qivxif-history = { path = "crates/qivxif-history" }
qivxif-store-redb = { path = "crates/qivxif-store-redb" }
qivxif-auth = { path = "crates/qivxif-auth" }
qivxif-sync = { path = "crates/qivxif-sync" }
qivxif-cache-model = { path = "crates/qivxif-cache-model" }
qivxif-quality = { path = "crates/qivxif-quality" }
