[package]
name = "qivxif-client-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
qivxif-client-core = { workspace = true }
qivxif-core = { workspace = true }
qivxif-render = { workspace = true }
qivxif-ui = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
