[package]
name = "qivxif-serverd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
qivxif-core = { workspace = true }
qivxif-net = { workspace = true }
qivxif-protocol = { workspace = true }
qivxif-sim = { workspace = true }
qivxif-storage = { workspace = true }
quinn = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
