[package]
name = "qivxif-superapp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
qivxif-action = { workspace = true }
qivxif-browser = { workspace = true }
qivxif-editor-buffer = { workspace = true }
qivxif-explorer = { workspace = true }
qivxif-persistence = { workspace = true }
qivxif-platform = { workspace = true }
qivxif-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
