[package]
name = "qivxifctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
qivxif-probe = { workspace = true }
qivxif-quality = { workspace = true }
tokio = { workspace = true }
