[package]
name = "qivxifctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
qivxif-auth.workspace = true
qivxif-core.workspace = true
qivxif-quality.workspace = true
qivxif-store-redb.workspace = true
serde_json.workspace = true
