[package]
name = "qivxif-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
argon2.workspace = true
blake3.workspace = true
qivxif-core.workspace = true
qivxif-graph.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
