[package]
name = "qivxif-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
wry = { workspace = true, optional = true }

[features]
default = []
webview = ["dep:wry"]
