[package]
name = "qivxif-client-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
qivxif-core = { workspace = true }
qivxif-net = { workspace = true }
qivxif-protocol = { workspace = true }
quinn = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
