[package]
name = "qivxif-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
postcard = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
