[package]
name = "qivxif-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
qivxif-assets = { workspace = true }
qivxif-core = { workspace = true }
qivxif-protocol = { workspace = true }
wgpu = { workspace = true }
