[package]
name = "qivxif-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
postcard = { workspace = true }
qivxif-core = { workspace = true }
qivxif-protocol = { workspace = true }
qivxif-world = { workspace = true }
redb = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
